--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     }
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.19",
     "@headlessui/react": "^2.1.2",
     "@lottiefiles/dotlottie-react": "^0.12.0",
     "@mdx-js/loader": "^3.0.1",
@@ -24,15 +25,18 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
+    "class-variance-authority": "^0.7.1",
     "contentlayer": "^0.3.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "motion": "^11.18.1",
     "next": "^14.0.3",
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.16",
+    "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rehype-pretty-code": "^0.13.2",
