--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.3",
     "rehype-pretty-code": "^0.13.2",
     "shiki": "^1.10.1",
     "swiper": "^8.4.7",
