--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "class-variance-authority": "^0.7.1",
     "contentlayer": "^0.3.2",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.15.0",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
     "motion": "^11.18.1",
     "next": "^14.0.3",
